# ttrk

./: .bttrkrc-sample  .travis.yml  AUTHORS  ChangeLog  FAQ  INSTALL  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h.in  configure  configure.ac
src/: Makefile.am  Makefile.in  chanbar.cpp  chanbar.h  jackmidi.cpp  jackmidi.h  main.cpp  midicontrol.cpp  midicontrol.h  mididev.h  patbar.cpp  patbar.h  rawmidi.cpp  rawmidi.h  rtctimer.cpp  rtctimer.h  screen.cpp  screen.h  song.cpp  song.h  songbar.cpp  songbar.h  thread.cpp  thread.h  utils.cpp  utils.h
