
AM_CXXFLAGS = -Wall -pedantic -DENABLE_SLFUTURE_CONST
bin_PROGRAMS = bttrk
bttrk_SOURCES = chanbar.cpp chanbar.h main.cpp midicontrol.cpp \
	midicontrol.h mididev.h patbar.cpp patbar.h rawmidi.cpp \
	rawmidi.h rtctimer.cpp rtctimer.h screen.cpp screen.h \
	song.cpp song.h songbar.cpp songbar.h thread.cpp thread.h \
	utils.cpp utils.h

