
AM_CXXFLAGS = -Wall -pedantic -DENABLE_SLFUTURE_CONST
bin_PROGRAMS = ttrk
ttrk_SOURCES = chanbar.cpp chanbar.h main.cpp midicontrol.cpp \
	midicontrol.h mididev.h patbar.cpp patbar.h jackmidi.cpp \
	jackmidi.h screen.cpp screen.h song.cpp song.h songbar.cpp \
	songbar.h thread.cpp thread.h utils.cpp utils.h

